added xml support
