# app/models/secret.go
@@ -12,9 +12,9 @@ type Secret struct {
 }
 
 type SecretResponse struct {
-	Hash           string
-	SecretText     string
-	CreatedAt      time.Time
-	ExpiresAt      time.Time
-	RemainingViews time.Time
+	Hash           string    `xml:"hash,attr" json:"hash"`
+	SecretText     string    `xml:"secretText,attr" json:"secretText"`
+	CreatedAt      time.Time `xml:"createdAt,attr" json:"createdAt"`
+	ExpiresAt      time.Time `xml:"expiresAt,attr" json:"expiresAt"`
+	RemainingViews time.Time `xml:"remainingViews,attr" json:"remainingViews"`
 }
